# pyo3-reuse-bindings

./: README.md
base/: Cargo.toml  setup.py
base/src/: lib.rs
derived/: Cargo.toml  setup.py
derived/src/: lib.rs
